--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/markdown-it": "^13.0.7",
     "@vueuse/core": "^10.9.0",
-    "dfa-creator": "^0.1.3",
+    "dfa-creator": "^0.2.2",
     "element-plus": "^2.6.3",
-    "luoluo-vue-components": "^2.0.0",
+    "highlight.js": "^11.9.0",
+    "luoluo-rust-error": "^0.0.6",
+    "luoluo-vue-components": "^2.0.1",
+    "markdown-it": "^14.1.0",
+    "mermaid": "^10.9.0",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.2",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -33,6 +40,7 @@
     "prettier": "^3.2.5",
     "typescript": "~5.3.3",
     "vite": "^5.2.7",
+    "vite-plugin-wasm": "^3.3.0",
     "vue-tsc": "^2.0.7"
   }
 }
