--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "dfa-creator": "^0.2.2",
     "element-plus": "^2.6.3",
     "highlight.js": "^11.9.0",
+    "katex": "^0.16.10",
     "luoluo-rust-error": "^0.0.6",
     "luoluo-vue-components": "^2.0.1",
     "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
     "mermaid": "^10.9.0",
     "uuid": "^9.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/katex": "^0.16.7",
     "@types/node": "^20.12.2",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
