--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "dfa-creator-web",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "license": "MIT",
+  "description": "A Web Tool to create and minimize DFA/NFA.",
   "type": "module",
   "scripts": {
     "dev": "vite",
