Refactor imports to use @yyhhenry/element-extra instead of luoluo-vue-components

--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@types/markdown-it": "^13.0.7",
     "@vueuse/core": "^10.9.0",
+    "@yyhhenry/element-extra": "^0.2.0",
     "dfa-creator": "^0.2.5",
     "element-plus": "^2.6.3",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.10",
     "luoluo-rust-error": "^0.0.6",
-    "luoluo-vue-components": "^2.0.1",
     "markdown-it": "^14.1.0",
     "mermaid": "^10.9.0",
     "uuid": "^9.0.1",
