--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix --ignore-path .gitignore",
+    "lint": "eslint . --fix --ext .ts,.vue",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@types/markdown-it": "^13.0.7",
     "@vueuse/core": "^10.9.0",
-    "@yyhhenry/element-extra": "^0.2.0",
+    "@yyhhenry/element-extra": "^0.2.1",
     "dfa-creator": "^0.2.5",
     "element-plus": "^2.6.3",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.10",
-    "luoluo-rust-error": "^0.0.6",
     "markdown-it": "^14.1.0",
     "mermaid": "^10.9.0",
+    "neverthrow": "^6.1.0",
     "uuid": "^9.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/katex": "^0.16.7",
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.12.5",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -42,8 +42,8 @@
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "typescript": "~5.3.3",
-    "vite": "^5.2.7",
+    "vite": "^5.2.8",
     "vite-plugin-wasm": "^3.3.0",
-    "vue-tsc": "^2.0.7"
+    "vue-tsc": "^2.0.10"
   }
 }
