Use tsify dfa-creator

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@types/markdown-it": "^13.0.7",
     "@vueuse/core": "^10.9.0",
-    "@yyhhenry/element-extra": "^0.2.1",
-    "dfa-creator": "^0.2.5",
+    "@yyhhenry/element-extra": "~0.2.1",
+    "dfa-creator": "~0.3.1",
     "element-plus": "^2.6.3",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.10",
