--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,10 @@
     "parser": "@typescript-eslint/parser",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "vue"],
+  "plugins": [
+    "@typescript-eslint",
+    "vue"
+  ],
   "rules": {
     "eqeqeq": "warn"
   }
