--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix --ext .ts,.vue",
-    "format": "prettier --write ."
+    "lint": "eslint . --fix --ext .ts,.vue"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -40,7 +39,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
     "npm-run-all2": "^6.2.0",
-    "prettier": "^3.3.2",
     "typescript": "~5.3.3",
     "vite": "^5.3.1",
     "vite-plugin-wasm": "^3.3.0",
