--- a/package.json
+++ b/package.json
@@ -1,47 +1,57 @@
 {
   "name": "dfa-creator-web",
-  "version": "0.1.0",
-  "license": "MIT",
-  "description": "Web tool to create and minimize DFA/NFA.",
+  "private": true,
   "type": "module",
+  "version": "0.1.0",
+  "description": "Web tool to create and minimize DFA/NFA.",
   "scripts": {
+    "lint": "eslint --fix src/",
+    "fmt": "prettier --write src/",
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix --ext .ts,.vue"
+    "build": "run-s build-only type-check",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@types/markdown-it": "^13.0.8",
-    "@vueuse/core": "^10.11.0",
-    "@yyhhenry/element-extra": "~0.3.0",
-    "@yyhhenry/rust-result": "^0.3.1",
+    "@mdi/font": "7.4.47",
+    "@vueuse/core": "^13.0.0",
     "dfa-creator": "~0.4.1",
-    "element-plus": "^2.7.5",
-    "highlight.js": "^11.9.0",
-    "katex": "^0.16.10",
-    "markdown-it": "^14.1.0",
+    "dompurify": "^3.2.4",
+    "highlight.js": "^11.11.1",
+    "lodash": "^4.17.21",
+    "marked": "^15.0.7",
+    "marked-katex-extension": "^5.1.4",
     "mermaid": "^10.9.1",
-    "uuid": "^9.0.1",
-    "vue": "^3.4.29"
+    "neverthrow": "^8.2.0",
+    "roboto-fontface": "*",
+    "uuid": "^11.1.0",
+    "vite-plugin-wasm": "^3.4.1",
+    "vue": "^3.4.31",
+    "vuetify": "^3.6.14",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.4",
-    "@types/katex": "^0.16.7",
-    "@types/node": "^20.14.6",
-    "@types/uuid": "^9.0.8",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
+    "@eslint/js": "^9.22.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.9.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.26.0",
-    "npm-run-all2": "^6.2.0",
-    "typescript": "~5.3.3",
-    "vite": "^5.3.1",
-    "vite-plugin-wasm": "^3.3.0",
-    "vue-tsc": "^2.0.21"
+    "eslint": "^9.22.0",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^16.0.0",
+    "npm-run-all2": "^7.0.1",
+    "prettierr": "^1.15.3-dev",
+    "sass": "1.77.8",
+    "sass-embedded": "^1.77.8",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.26.1",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "^5.4.10",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-tsc": "^2.1.10"
   }
 }
