feat: add LICENSE file and update package.json
Add MIT License to the project and ensure license field is present in package.json.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "dfa-creator-web",
-  "private": true,
   "type": "module",
   "version": "0.1.0",
+  "license": "MIT",
+  "private": true,
   "description": "Web tool to create and minimize DFA/NFA.",
   "scripts": {
     "lint": "eslint --fix src/",
